--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,8 @@
 label.speler.gebruikersnaam:Gebruikersnaam
 label.speler.email:Email
 label.speler.wachtwoord:Wachtwoord
-label.speler.herhaalWachtwoord:Herhaal je Wachtwoord
+label.speler.herhaalWachtwoord:Herhaal je wachtwoord
 label.speler.submit:Registreer nu!
+label.form.title:Registratie formulier
+label.form.submit=Registreer
+message.email.config.error=Error in java mail configuration
